--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 <html>
 
     <head>
-        <title>Inception Model</title>
+        <title>Hello World</title>
     </head>
-    
+
     <body>
         <form method="POST" enctype="multipart/form-data" action="/results">
             <input type="file" name=file>
@@ -12,4 +12,4 @@
         </form>
     </body>
     
-    </html>
+</html>
